--- a/server/.env
+++ b/server/.env
@@ -1,8 +1,9 @@
 MONGODB_URI="mongodb+srv://nextyouth:nextyouth365@cluster0.bpgfkte.mongodb.net"
 JWT_SECRET="Next Youth"
-Node_ENV="development"
+NODE_ENV="development"
 
 SMTP_USER="8a3eaf002@smtp-brevo.com"
 SMTP_PASS="YRNH835by0sD2cSP"
 
 SENDER_EMAIL="nextyouth365@gmail.com"
+CLIENT_URL="http://localhost:3000" # Update with your frontend URL
