--- a/client/package.json
+++ b/client/package.json
@@ -13,6 +13,7 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.8.4",
     "chart.js": "^4.4.9",
+    "date-fns": "^4.1.0",
     "emoji-picker-react": "^4.12.2",
     "i18next": "^22.5.1",
     "i18next-browser-languagedetector": "^8.0.5",
