--- a/server/.env
+++ b/server/.env
@@ -7,4 +7,4 @@ SMTP_PASS="YRNH835by0sD2cSP"
 
 SENDER_EMAIL="nextyouth365@gmail.com"
 CLIENT_URL="https://next-youth.vercel.app"
-SERVER_URL="https://next-youth-server.vercel.app"
+SERVER_URL="https://next-youth-server.onrender.com"
